Ajustes nos testes